Refactored BlogEntriesResource, added OpenAPI documentation
